--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.11"
 pypdf2 = "^3.0.1"
 mysql-connector-python = "^9.3.0"
 python-dotenv = "^1.1.0"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.13.4"
+pandas = "^2.3.0"
+lxml = "^5.4.0"
 
 
 [build-system]
